--- a/lecture20/index.html
+++ b/lecture20/index.html
@@ -19,6 +19,7 @@
       <ol>
         <li ng-repeat="item in showList.items">
           {{ item.quantity }} of {{ item.name }}
+          <button ng-click="showList.removeItem($index);">Remove</button>
         </li>
       </ol>
     </div>
